tests/pass/if_condition_struct_paren.jolt
struct Point {
    x: i32;
}

fn main() i32 {
    if (Point { x: 1; }) {
        ret 1;
    }
    ret 0;
}
