tests/fail/duplicate_struct.jolt
struct S {
    x: i32;
}

struct S {
    y: i32;
}

fn main() void {
}
